Merge task prepare and start
There is no benefit distinguishing between the two. The opposite is the
case, it adds one more explicit state to reason about.

Part of the motivation is to make the BatchIterator construction async.
That should allow us to use `awaitShardSearchActive` from

  https://github.com/elastic/elasticsearch/commit/f23ed6188db864b1ea1062e5d44bdf5654b2aa3c